# linux-file-info-rs

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
